# fishnet-binaries

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  trigger.yml
scripts/: check-upstream.sh  get-git-info.sh  rename_files.py
