[tool.poetry]
name = "rename_files.py"
version = "0.0.1"
description = "Output file renamer"
license = "GPL-3.0-or-later"

authors = [
    "Dustyn Gibson <miigotu@gmail.com>"
]

maintainers = [
    "Dustyn Gibson <miigotu@gmail.com>"
]

repository = "https://github.com/miigotu/fishnet-binaries"

packages = [{ include = "scripts" }]
[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.16.0"
black = "^22.3.0"
flake8-black = "^0.3.2"
pytest-black = "^0.3.12"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
exclude = [
    ".eggs",
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
]
inline-quotes = "double"
docstring-convention = "numpy"
ignore = [
    "C812",
    "D4",
    "D400",
    "D401",
    "D403",
    "D406",
    "D407",
    "D200",
    "D202",
    "D205",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D106",
    "S101",
    "PT009",
    "PT017"
]

max_line_length = 160
show_source = "True"
builtins = ["_"]
#select = 'C103'

[tool.pytest.ini_options]
testpaths = ["tests", "rename_files.py"]
addopts = "--tb=long --showlocals"


[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 160
combine_as_imports = true
order_by_type = false
remove_imports = [ "from __future__ import absolute_import", "from __future__ import print_function", "from __future__ import unicode_literals" ]
extra_standard_library = [ "posixpath", "ntpath" ]
use_parentheses = true
src_paths = [ "scripts" ]

[tool.black]
line-length = 160
target_version = ['py39']
include = '\.pyi?$'

[tool.poe.tasks]
_black = {cmd = "black . --check --diff", help = "Check code style using black"}
_isort = {cmd = "isort . --check-only --diff", help = "Check import order"}
flake8 = {cmd = "flake8 --select C103 rename_files.py", help = "Check for undefined variables"}

isort = {cmd = "isort .", help = "Fix import order"}
black = {cmd = "black .", help = "Reformat code using black"}

lint = ["_black", "_isort", "flake8"]
format = ["black", "isort", "flake8"]
